fixed uci image

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           </div>
           <div class="subsection-body-wrapper">
             <div class="subsection-body-image">
-              <img class="profile" src="./img/UCI-logo.PNG" />
+              <img class="profile" src="./img/UCI-logo.png" />
             </div>
             <div class="subsection-body">
               <div id="school" class="info">
