image styling and nav bar updates

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <title>
       Khuong Tiet
     </title>
+    <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16" />
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:200i,400,600|Lato" rel="stylesheet">
     <!-- Icons used from http://www.iconsweets2.com/ -->
   <head/>
 
@@ -37,7 +40,7 @@
             </li>
           </ul>
         </div>
-        <h1> < &nbsp; K &nbsp; H &nbsp; U &nbsp; O &nbsp; N &nbsp; G &nbsp;&nbsp; T &nbsp; I &nbsp; E &nbsp; T &nbsp; /> </h1>
+        <h1> < K &nbsp; H &nbsp; U &nbsp; O &nbsp; N &nbsp; G &nbsp;&nbsp;&nbsp; T &nbsp; I &nbsp; E &nbsp; T /> </h1>
       </div>
 
       <div id="main-content">
@@ -53,7 +56,7 @@
             </div>
             <div class="subsection-body">
               <div id="about" class="info">
-                <div class="info-head"> About Me </div>
+                <div class="info-head"> A b o u t &nbsp; M e </div>
                 <div class="info-detail">
                   I'm currently a 4th year at UCI studying Software Engineering. I really enjoy project management, computer graphics, and automation.
                 </div>
@@ -74,7 +77,7 @@
             </div>
             <div class="subsection-body">
               <div id="school" class="info">
-                <div class="info-head"> University of California, Irvine </div>
+                <div class="info-head"> U n i v e r s i t y &nbsp; o f &nbsp; C a l i f o r n i a , &nbsp; I r v i n e </div>
                 <div class="info-detail">
                   Started September 2014, Graduating December 2018
                 </div>
@@ -130,39 +133,26 @@
           </div>
           <div class="subsection-body-wrapper">
             <div class="subsection-body-image">
-              <img class="profile" src="./img/portal-logo.png" />
               <img class="profile" src="./img/delphi-logo.png" />
             </div>
             <div class="subsection-body">
               <div class="info">
-                <div class="info-head"> The Portal </div>
-                <div class="info-detail">
-                  The Portal is a start up based in Irvine that focuses on preparing students for the industry. Students get to work on client projects while learning technologies used in the field.
-                </div>
-                <br />
-              </div>
-              <div class="subsection-p">
-                <ul class="work">
-                  <li>
-                    Web Development using a JavaScript based stack, using React for the front-end and Postgres running on Express for the backend.
-                  </li>
-                  <li>
-                    Version control is done using GitHub and bug/issue tracking with Jira.
-                  </li>
-                  <li>
-                    Most of the work is collaboratively done with other peers at the Portal.
-                  </li>
-                </ul>
-              </div>
+                <div class="info-head"> D e l p h i &nbsp; D i s p l a y &nbsp; S y s t e m s </div>
+                <div class="info-detail-container">
+                  <div class="info-detail">
+                    <div class="address">
+                      3550 Hyland Ave, Costa Mesa, CA 92626
+                    </div>
+                    <div class="duration">
+                      October 2017 - Present
+                    </div>
+                  </div>
 
-              <div class="info">
-                <div class="info-head"> Delphi Display Systems </div>
-                <div class="info-detail">
-                  Delphi Display Systems is a computer software and hardware company based in Costa Mesa that designs and builds signage and display systems for companies.
                 </div>
                 <br />
               </div>
               <div class="subsection-p">
+                Delphi Display Systems is a computer software and hardware company based in Costa Mesa that designs and builds signage and display systems for companies.
                 <ul class="work">
                   <li>
                     Wrote scripts to automate testing of software using Selenium with Python
@@ -172,6 +162,41 @@
                   </li>
                   <li>
                     Reviewed technical documents to ensure that team members outside of development could use it
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="subsection-body-wrapper">
+            <div class="subsection-body-image">
+              <img class="profile" src="./img/portal-logo.png" />
+            </div>
+            <div class="subsection-body">
+              <div class="info">
+                <div class="info-head"> T h e &nbsp; P o r t a l </div>
+                <div class="info-detail-container">
+                  <div class="info-detail">
+                    <div class="address">
+                      4199 Campus Drive, Suite 210, Irvine, CA 92612
+                    </div>
+                    <div class="duration">
+                      June 2017 - December 2017
+                    </div>
+                  </div>
+                </div>
+                <br />
+              </div>
+              <div class="subsection-p">
+                The Portal is a start up based in Irvine that focuses on preparing students for the industry. Students get to work on client projects while learning technologies used in the field.
+                <ul class="work">
+                  <li>
+                    Web Development using a JavaScript based stack, using React for the front-end and Postgres running on Express for the backend.
+                  </li>
+                  <li>
+                    Version control is done using GitHub and bug/issue tracking with Jira.
+                  </li>
+                  <li>
+                    Most of the work is collaboratively done with other peers at the Portal.
                   </li>
                 </ul>
               </div>
@@ -188,11 +213,10 @@
           <div class="subsection-body-wrapper">
             <div class="subsection-body-image">
               <img class="profile" src="./img/react-logo.png" />
-              <img class="profile" src="./img/python-logo.png" />
             </div>
             <div class="subsection-body">
               <div class="info">
-                <div class="info-head"> Med App Jam </div>
+                <div class="info-head"> M e d &nbsp; A p p &nbsp; J a m </div>
                 <div class="info-detail">
                   The Med AR Jam is a two-week long coding competition where students from all disciplines come together to form teams and create a fully functional and mobile medical application on the iOS or Android platform. Apps are judged on various criteria and the top teams are awarded prizes and recognition. Our theme this year is Augmented Reality (AR) in relation to health care. Your goal is to create medical applications that range from helping medical students/faculty in teaching/learning to clinical apps for use by patients or clinicians with AR.
                 </div>
@@ -208,8 +232,15 @@
                   </li>
                 </uL>
               </div>
+            </div>
+          </div>
+          <div class="subsection-body-wrapper">
+            <div class="subsection-body-image">
+              <img class="profile" src="./img/python-logo.png" />
+            </div>
+            <div class="subsection-body">
               <div class="info">
-                <div class="info-head"> Track </div>
+                <div class="info-head"> T r a c k </div>
                 <div class="info-detail">
                   Track is a web application developed using React (Create React App), Express, and Spotify's API to have create a web-based playlist manager
                 </div>
@@ -237,7 +268,7 @@
           <div class="subsection-body-wrapper">
             <div class="subsection-body">
               <div class="info">
-                <div class="info-head"> Contact Me </div>
+                <div class="info-head"> C o n t a c t &nbsp; M e </div>
                 <div class="info-detail">
                   Email: ktiet1@uci.edu <br />
                   Phone: 6572389178
