added new breakpoints and research section

--- a/index.html
+++ b/index.html
@@ -79,7 +79,12 @@
               <div id="school" class="info">
                 <div class="info-head"> U n i v e r s i t y &nbsp; o f &nbsp; C a l i f o r n i a , &nbsp; I r v i n e </div>
                 <div class="info-detail">
-                  Started September 2014, Graduating December 2018
+                  <div class="address">
+                    Irvine, CA 92697
+                  </div>
+                  <div class="duration">
+                    September 2014 - March 2019
+                  </div>
                 </div>
               </div>
               <div class="subsection-p">
@@ -133,7 +138,7 @@
           </div>
           <div class="subsection-body-wrapper">
             <div class="subsection-body-image">
-              <img class="profile" src="./img/delphi-logo.png" />
+              <a href="http://www.delphidisplay.com/"><img class="profile" src="./img/delphi-logo.png" /></a>
             </div>
             <div class="subsection-body">
               <div class="info">
@@ -147,7 +152,6 @@
                       October 2017 - Present
                     </div>
                   </div>
-
                 </div>
                 <br />
               </div>
@@ -169,7 +173,7 @@
           </div>
           <div class="subsection-body-wrapper">
             <div class="subsection-body-image">
-              <img class="profile" src="./img/portal-logo.png" />
+              <a href="http://theportal.io/"><img class="profile" src="./img/portal-logo.png" /></a>
             </div>
             <div class="subsection-body">
               <div class="info">
@@ -218,11 +222,12 @@
               <div class="info">
                 <div class="info-head"> M e d &nbsp; A p p &nbsp; J a m </div>
                 <div class="info-detail">
-                  The Med AR Jam is a two-week long coding competition where students from all disciplines come together to form teams and create a fully functional and mobile medical application on the iOS or Android platform. Apps are judged on various criteria and the top teams are awarded prizes and recognition. Our theme this year is Augmented Reality (AR) in relation to health care. Your goal is to create medical applications that range from helping medical students/faculty in teaching/learning to clinical apps for use by patients or clinicians with AR.
+
                 </div>
                 <br />
               </div>
               <div class="subsection-p">
+                The Med AR Jam is a two-week long coding competition where students from all disciplines come together to form teams and create a fully functional and mobile medical application on the iOS or Android platform. Apps are judged on various criteria and the top teams are awarded prizes and recognition. Our theme this year is Augmented Reality (AR) in relation to health care. Your goal is to create medical applications that range from helping medical students/faculty in teaching/learning to clinical apps for use by patients or clinicians with AR.
                 <uL class="work">
                   <li>
                     Managed fellow team members in organizational aspects and technical direction
@@ -242,17 +247,44 @@
               <div class="info">
                 <div class="info-head"> T r a c k </div>
                 <div class="info-detail">
-                  Track is a web application developed using React (Create React App), Express, and Spotify's API to have create a web-based playlist manager
+
                 </div>
                 <br />
               </div>
               <div class="subsection-p">
+                Track is a web application developed using React (Create React App), Express, and Spotify's API to have create a web-based playlist manager
                 <uL class="work">
                   <li>
                     Used open source UI libraries to speed up the development process and focus on functionality while maintaining a clean look
                   </li>
                   <li>
                     Wrote API calls to gather data from Spotify and format the data for output in React
+                  </li>
+                </uL>
+              </div>
+            </div>
+          </div>
+          <div class="subsection-body-wrapper">
+            <div class="subsection-body-image">
+              <a href="./research.html"><img class="profile" src="./img/html-css-js-logo.png" /></a>
+            </div>
+            <div class="subsection-body">
+              <div class="info">
+                <div class="info-head"> k h u o n g t i e t . g i t h u b . i o </div>
+                <div class="info-detail">
+                </div>
+                <br />
+              </div>
+              <div class="subsection-p">
+                This portfolio website has been something that I have always wanted to create and I did in fact have a rough out version of this previously.
+                As a result of one of my classes, I was able to pour more time into it and have to come closer to what I want. In the future I am considering to redo
+                the entire site in React or possibly Vue to gain good practice.
+                <uL class="work">
+                  <li>
+                    Developed using only HTML, CSS, and JavaScript
+                  </li>
+                  <li>
+                    Utitlized Anime.js animation engine for some animations
                   </li>
                 </uL>
               </div>
@@ -266,15 +298,9 @@
             </div>
           </div>
           <div class="subsection-body-wrapper">
-            <div class="subsection-body">
-              <div class="info">
-                <div class="info-head"> C o n t a c t &nbsp; M e </div>
-                <div class="info-detail">
-                  Email: ktiet1@uci.edu <br />
-                  Phone: 6572389178
-                </div>
-                <br />
-              </div>
+            <div class="subsection-body contact-body">
+              Email: ktiet1@uci.edu&nbsp;<br />
+              Phone: 657-238-9178
             </div>
           </div>
         </section>
