additional responsive fixes

--- a/research.html
+++ b/research.html
@@ -58,6 +58,12 @@
                 <div class="info-detail">
                 </div>
               </div>
+              <div class="subsection-body-text">
+                The user interviews really helped me gauge what people expected to see in a portfolio. The consensus was that most people thought of a portfolio as a visual representation
+                of your resume. As such I designed my portfolio to fit this sort of format. I do feel that the interview questions strongly leaned towards an overall grasp rather than
+                personal questions and input.
+                <a href="#interviews">View the user interviews</a>
+              </div>
             </div>
           </div>
           <div class="subsection-body-wrapper">
@@ -68,6 +74,12 @@
                 <div class="info-head"> C o m p e t i t o r &nbsp; A n a l y s i s </div>
                 <div class="info-detail">
                 </div>
+              </div>
+              <div class="subsection-body-text">
+                Conducting competitor analyses also assisted heavily in how I wanted to style and format my website. Of course I had an idea of what I wanted but there are just so many
+                ways of laying out a website that I needed inspiration to draw from. I wanted to stray away from the very basic Bootstrap-esque layout with the hero image and three sections
+                with a fixed navigation bar at the top. I found a nice middle ground between that and something new. The biggest inspiration that I had draw from was a film studios' website.
+                <a href="#interviews">View the competitor analysis</a>
               </div>
             </div>
           </div>
