updated portfolio before final part 2

--- a/index.html
+++ b/index.html
@@ -21,22 +21,22 @@
           <ul class="top-utility-bar">
 
             <li>
-              <a class="utility-icon" href="#bio"><img id="bio-utility-icon" class="icon" src=./img/biography.png></a>
+              <a class="utility-icon" href="#bio"><img id="bio-utility-icon" class="uicon" src=./img/biography.png></a>
             </li>
             <li>
-              <a class="utility-icon" href="#education"><img id="school-utility-icon" class="icon" src=./img/school-icon.png></a>
+              <a class="utility-icon" href="#education"><img id="school-utility-icon" class="uicon" src=./img/school-icon.png></a>
             </li>
             <li>
-              <a class="utility-icon" href="#experience"><img id="work-utility-icon" class="icon" src=./img/brief-icon.png></a>
+              <a class="utility-icon" href="#experience"><img id="work-utility-icon" class="uicon" src=./img/brief-icon.png></a>
             </li>
             <li>
-              <a class="utility-icon" href="#extracurricular"><img id="project-utility-icon" class="icon" src=./img/laptop.png></a>
+              <a class="utility-icon" href="#extracurricular"><img id="project-utility-icon" class="uicon" src=./img/laptop.png></a>
             </li>
             <li>
-              <a class="utility-icon" href="#contact"><img id="contact-utility-icon" class="icon" src=./img/phone.png></a>
+              <a class="utility-icon" href="#contact"><img id="contact-utility-icon" class="uicon" src=./img/phone.png></a>
             </li>
             <li>
-              <a class="utility-icon" href="https://github.com/khuongTiet"><img id="github-utility-icon" class="icon" src=./img/github.png></a>
+              <a class="utility-icon" href="https://github.com/khuongTiet"><img id="github-utility-icon" class="uicon" src=./img/github.png></a>
             </li>
           </ul>
         </div>
@@ -58,7 +58,13 @@
               <div id="about" class="info">
                 <div class="info-head"> A b o u t &nbsp; M e </div>
                 <div class="info-detail">
-                  I'm currently a 4th year at UCI studying Software Engineering. I really enjoy project management, computer graphics, and automation.
+                  I'm currently a 4th year at UCI studying Software Engineering. Software development is something that I really enjoy, not just the hands-on programming, but the
+                  organizational aspect of it, the design, the requirements, the whole process is something that I enjoy. I love being in a team, leading the team, following the team, learning
+                  and growing as we come to a solution for the problem at hand.
+                  <br/>
+                  I wish to someday be involved in the development of pipeline tools for an animation studio or visual effects company. Building tools is something that really piques my interest
+                  and animations have always amazed me so I hope to find myself collaborating between teams to build the tools that contribute to it.
+                </br/>
                 </div>
               </div>
             </div>
