--- a/research.html
+++ b/research.html
@@ -20,22 +20,22 @@
         <div id="utility-bar">
           <ul class="top-utility-bar">
             <li>
-              <a class="utility-icon" href="./index.html"><img id="home-utility-icon" class="icon" src=./img/home-icon.png></a>
+              <a class="utility-icon" href="./index.html"><img id="home-utility-icon" class="uicon" src=./img/home-icon.png></a>
             </li>
             <li>
-              <a class="utility-icon" href="#research"><img id="research-utility-icon" class="icon" src=./img/research-icon.png></a>
+              <a class="utility-icon" href="#research"><img id="research-utility-icon" class="uicon" src=./img/research-icon.png></a>
             </li>
             <li>
-              <a class="utility-icon" href="#testing"><img id="testing-utility-icon" class="icon" src=./img/testing-icon.png></a>
+              <a class="utility-icon" href="#testing"><img id="testing-utility-icon" class="uicon" src=./img/testing-icon.png></a>
             </li>
             <li>
-              <a class="utility-icon" href="#summary"><img id="summary-utility-icon" class="icon" src=./img/summary-icon.png></a>
+              <a class="utility-icon" href="#summary"><img id="summary-utility-icon" class="uicon" src=./img/summary-icon.png></a>
             </li>
             <li>
-              <a class="utility-icon" href="#incorporation"><img id="incorporation-utility-icon" class="icon" src=./img/incorporation-icon.png></a>
+              <a class="utility-icon" href="#incorporation"><img id="incorporation-utility-icon" class="uicon" src=./img/incorporation-icon.png></a>
             </li>
             <li>
-              <a class="utility-icon" href="https://github.com/khuongTiet"><img id="github-utility-icon" class="icon" src=./img/github.png></a>
+              <a class="utility-icon" href="https://github.com/khuongTiet"><img id="github-utility-icon" class="uicon" src=./img/github.png></a>
             </li>
           </ul>
         </div>
@@ -51,6 +51,7 @@
           </div>
           <div class="subsection-body-wrapper">
             <div class="subsection-body-image">
+              <a href="https://docs.google.com/spreadsheets/d/1Ap_iE3clqtWdJzX2ITF7J89cPTnDt2XUTee7OPieCnk/edit#gid=1458759859">View the user interviews</a>
             </div>
             <div class="subsection-body">
               <div id="about" class="info">
@@ -62,12 +63,12 @@
                 The user interviews really helped me gauge what people expected to see in a portfolio. The consensus was that most people thought of a portfolio as a visual representation
                 of your resume. As such I designed my portfolio to fit this sort of format. I do feel that the interview questions strongly leaned towards an overall grasp rather than
                 personal questions and input.
-                <a href="#interviews">View the user interviews</a>
               </div>
             </div>
           </div>
           <div class="subsection-body-wrapper">
             <div class="subsection-body-image">
+              <a href="https://docs.google.com/spreadsheets/d/1FxScHkGMiskNqwGR64O5r_SGPRWP9qghVwPl2YgqXVU/edit#gid=0">View the competitor analysis</a>
             </div>
             <div class="subsection-body">
               <div id="about" class="info">
@@ -76,15 +77,16 @@
                 </div>
               </div>
               <div class="subsection-body-text">
+                A competitor analysis is a look at the peers that are doing what you want to be doing. It's essentially scoping out the competition to gain insight on what to do.
                 Conducting competitor analyses also assisted heavily in how I wanted to style and format my website. Of course I had an idea of what I wanted but there are just so many
                 ways of laying out a website that I needed inspiration to draw from. I wanted to stray away from the very basic Bootstrap-esque layout with the hero image and three sections
                 with a fixed navigation bar at the top. I found a nice middle ground between that and something new. The biggest inspiration that I had draw from was a film studios' website.
-                <a href="#interviews">View the competitor analysis</a>
               </div>
             </div>
           </div>
           <div class="subsection-body-wrapper">
             <div class="subsection-body-image">
+              <a href="https://docs.google.com/spreadsheets/d/12mV955kC6GpvVLgz0r_78WAYXGATHuwopZ32M-EnQnY/edit#gid=2">View the feature value matrix</a>
             </div>
             <div class="subsection-body">
               <div id="about" class="info">
@@ -92,16 +94,31 @@
                 <div class="info-detail">
                 </div>
               </div>
+              <div class="subsection-body-text">
+                A feature value matrix is a chart of features that you would want to implement along with a scoring system on how valuable it is to you.
+                The features that I picked were ones that you would expect to see on a resume. I wanted to have a navigation bar because I feel like that is something that is
+                expected by now so I had to have it. Having a picture of myself was important as well because I want the person viewing the portfolio to attribute all that they
+                see to a face.
+                </select>
+              </div>
             </div>
           </div>
           <div class="subsection-body-wrapper">
             <div class="subsection-body-image">
+              <a href="https://docs.google.com/presentation/d/120qkDs4_WgLC4ATLZC1eaDCjt6Hbc2l9lfWvZ8jmzes/edit#slide=id.gd46c24b48_0_24">View the feature prioritization</a>
             </div>
             <div class="subsection-body">
               <div id="about" class="info">
                 <div class="info-head"> F e a t u r e &nbsp; P r i o r i t i z a t i o n </div>
                 <div class="info-detail">
                 </div>
+              </div>
+              <div class="subsection-body-text">
+                I prioritized on the features that I felt like could have been done realistically in the time frame that I had, as well as based upon how much I wanted them.
+                Using the value scores from the feature value matrix helped in deciding which ones to implement but I also had my own judgement in which ones to pick. Prioritizing
+                features really helps you with the way you think about how you want to layout the interface. Having a set of features in mind helps you build out the core of what
+                you think you would want, and then you can add on additional features as you see fit. This is how I approached the rest of my portfolio after really deciding upon
+                core features that I wanted to keep no matter what.
               </div>
             </div>
           </div>
@@ -114,6 +131,7 @@
           </div>
           <div class="subsection-body-wrapper">
             <div class="subsection-body-image">
+              <a href="https://docs.google.com/spreadsheets/d/12aEvq6XcqR5JiGtPobDqx7Gg8FV28acqn0Pb4BMaSBs/edit#gid=0">View the user stories</a>
             </div>
             <div class="subsection-body">
               <div id="about" class="info">
@@ -125,6 +143,7 @@
           </div>
           <div class="subsection-body-wrapper">
             <div class="subsection-body-image">
+              <a href="https://docs.google.com/spreadsheets/d/1TR81nuFTOXjdsSlgI5C2lrNT4lDy_PF2UZ9EFZHrYX8/edit#gid=0">View the cognitive walkthroughs</a>
             </div>
             <div class="subsection-body">
               <div id="about" class="info">
@@ -136,6 +155,9 @@
           </div>
           <div class="subsection-body-wrapper">
             <div class="subsection-body-image">
+              <a href="https://usabilityhub.com/do/69a14beff4dd/891c">View the first user test</a>
+              <br/>
+              <a href="https://usabilityhub.com/do/cc647b08c639/82ca">View the second user test</a>
             </div>
             <div class="subsection-body">
               <div id="about" class="info">
