changes before presentation

--- a/research.html
+++ b/research.html
@@ -62,7 +62,10 @@
               <div class="subsection-body-text">
                 The user interviews really helped me gauge what people expected to see in a portfolio. The consensus was that most people thought of a portfolio as a visual representation
                 of your resume. As such I designed my portfolio to fit this sort of format. I do feel that the interview questions strongly leaned towards an overall grasp rather than
-                personal questions and input.
+                personal questions and input. I decided to conduct my interviews across a wide range of people. I interviewed fellow students in the class, a person within the overarching
+                school of Computer Science but not in the same department, as well as a person that is majoring in Fashion. I feel like for any kind of work that involves design, there
+                will be a portfolio so it would be good practice to hear what kinds of inputs these people would have. Portfolios are visual so I feel like the answers that I received
+                from the fashion major really helped me shape out the design for my portfolio.
               </div>
             </div>
           </div>
@@ -98,7 +101,10 @@
                 A feature value matrix is a chart of features that you would want to implement along with a scoring system on how valuable it is to you.
                 The features that I picked were ones that you would expect to see on a resume. I wanted to have a navigation bar because I feel like that is something that is
                 expected by now so I had to have it. Having a picture of myself was important as well because I want the person viewing the portfolio to attribute all that they
-                see to a face.
+                see to a face. It was a bit difficult scoring each feature because I already had in mind what I wanted so the scoring might have been a bit biased towards
+                certain ones. In the future I believe that I would come into this process without having a set of features that I would want to implement before hand and
+                gather the features during the process not before. That is not to say its bad practice to have some features that I would want to see in the end design but
+                for the gathering stage I feel that it would help me if I came into the process with a clean mind and a clean slate with nothing to compare to.
                 </select>
               </div>
             </div>
@@ -139,6 +145,14 @@
                 <div class="info-detail">
                 </div>
               </div>
+              <div class="subsection-body-text">
+                User stories are vital to the creation of any product or design. They're what helps you drive your overall design and really lets you have a look
+                into what you should be producing. By having user stories you are able to forge your design into something that guides users and helps to get
+                what they really need out of your design. The way I arrived at creating my user stories was to have a look at my features, decide what kind of
+                user would be likely to want or use that feature, and then I would go ahead and try to find that feature as if I were that user. I put myself in the
+                user's shoes and set out with a goal in mind to use that feature. This way really helped me visualize what kind of interactions would be happening
+                at each section of my portfolio.
+              </div>
             </div>
           </div>
           <div class="subsection-body-wrapper">
@@ -150,6 +164,14 @@
                 <div class="info-head"> C o g n i t i v e &nbsp; W a l k t h r o u g h s </div>
                 <div class="info-detail">
                 </div>
+              </div>
+              <div class="subsection-body-text">
+                A cognitive walkthough is essentially leading a user through your work, giving them instructions or tasks to do something, and then taking note
+                of how they interact with it and the outcome of the tasks. Cognitive walkthroughs really help with actually seeing how a user interacts with your
+                design first hand and really showcases the strengths and weaknesses of what you have designed. There were some cases in which conducting the
+                cognitive walkthrough was a bit frustrating because I knew how the portfolio worked and I had the design in mind but of course that did not
+                translate well into how other people would see and use the site. It was a very good exercise to conduct the walkthroughs though as they really
+                helped me see the biggest flaws in my design and really assisted in the overall redesign of the portfolio.
               </div>
             </div>
           </div>
@@ -165,6 +187,17 @@
                 <div class="info-detail">
                 </div>
               </div>
+              <div class="subsection-body-text">
+                For the user tests, I had chosen to use a navigation test and a 5 second visual test. I feel like initially I knew that one of the main problems
+                with my previous design was the visuals of it. I felt like the colors were clashing so I wanted to have users try to navigate through the site and
+                let me know what they thought about the overall design and color scheme that I had. The tests really helped me understand where users would
+                initially look for certain sections in my portfolio as well as helping me get the opinions of people on the coloring that I had set up for
+                my sections. It really helped that some of my tests were anonymous as it allowed the test taker to have free reign in terms of how they would
+                critique me as I believe nothing really comes from kind and sweet critique. Challenges that I had come to terms with were how limited I was able
+                to actually test and see the results for the test. I feel that the way I had tested the portfolio was a half hearted cognitive walkthrough and that
+                I would have had more cognitive walkthroughs to base my work off of instead of conducting these kinds of tests. Certainly a different type of test would
+                have proven more useful but I did not go down that route during this process.
+              </div>
             </div>
           </div>
         </section>
@@ -174,11 +207,45 @@
               <h2>Summary of Findings</h2>
             </div>
           </div>
+          <div class="subsection-body-wrapper">
+            <div class="subsection-body">
+              <div class="subsection-body-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sit amet sapien luctus elit congue venenatis.
+                Donec quis mauris mattis, ornare mauris vitae, placerat sapien. Orci varius natoque penatibus et magnis dis parturient montes,
+                nascetur ridiculus mus. Nullam euismod eu purus id vestibulum. Duis a diam ultrices, convallis magna fermentum, consectetur massa.
+                Etiam eu scelerisque lacus, quis rutrum metus. Aliquam euismod eros a pretium tempor. Nullam nunc nisi, cursus eu sodales sit amet,
+                convallis ut est. Duis sit amet malesuada nibh. Pellentesque dictum sapien et scelerisque pulvinar. Sed imperdiet orci ex, vel tincidunt
+                risus dapibus vitae. Nullam congue arcu at erat blandit hendrerit. Integer congue tortor feugiat, porta lectus eget, fringilla odio. Fusce
+                commodo faucibus metus in ullamcorper. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+                Sed purus lectus, hendrerit eget luctus ac, ultricies eget orci. Vestibulum quam nulla, ornare sit amet dui id, mollis posuere ipsum.
+                Integer consequat ex vitae odio elementum, sit amet placerat arcu aliquam. Morbi ligula urna, dictum nec dapibus at, suscipit non quam.
+                Vivamus congue blandit velit, vel sodales eros vestibulum eu. Nullam molestie dignissim risus, a tempus lectus sagittis at. Aliquam varius
+                vulputate tellus, eget pretium ex porta eget.
+              </div>
+            </div>
+          </div>
         </section>
         <section id="incorporation" class="subsection">
           <div class="subsection-head">
             <div class="subsection-name">
               <h2>Incorporation of Findings</h2>
+            </div>
+          </div>
+          <div class="subsection-body-wrapper">
+            <div class="subsection-body">
+              <div class="subsection-body-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sit amet sapien luctus elit congue venenatis.
+                Donec quis mauris mattis, ornare mauris vitae, placerat sapien. Orci varius natoque penatibus et magnis dis parturient montes,
+                nascetur ridiculus mus. Nullam euismod eu purus id vestibulum. Duis a diam ultrices, convallis magna fermentum, consectetur massa.
+                Etiam eu scelerisque lacus, quis rutrum metus. Aliquam euismod eros a pretium tempor. Nullam nunc nisi, cursus eu sodales sit amet,
+                convallis ut est. Duis sit amet malesuada nibh. Pellentesque dictum sapien et scelerisque pulvinar. Sed imperdiet orci ex, vel tincidunt
+                risus dapibus vitae. Nullam congue arcu at erat blandit hendrerit. Integer congue tortor feugiat, porta lectus eget, fringilla odio. Fusce
+                commodo faucibus metus in ullamcorper. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+                Sed purus lectus, hendrerit eget luctus ac, ultricies eget orci. Vestibulum quam nulla, ornare sit amet dui id, mollis posuere ipsum.
+                Integer consequat ex vitae odio elementum, sit amet placerat arcu aliquam. Morbi ligula urna, dictum nec dapibus at, suscipit non quam.
+                Vivamus congue blandit velit, vel sodales eros vestibulum eu. Nullam molestie dignissim risus, a tempus lectus sagittis at. Aliquam varius
+                vulputate tellus, eget pretium ex porta eget.
+              </div>
             </div>
           </div>
         </section>
