--- a/research.html
+++ b/research.html
@@ -207,20 +207,21 @@
               <h2>Summary of Findings</h2>
             </div>
           </div>
-          <div class="subsection-body-wrapper">
-            <div class="subsection-body">
+          <div class="subsection-body-wrapper paragraph-text">
+            <div class="subsection-body wide-body">
               <div class="subsection-body-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sit amet sapien luctus elit congue venenatis.
-                Donec quis mauris mattis, ornare mauris vitae, placerat sapien. Orci varius natoque penatibus et magnis dis parturient montes,
-                nascetur ridiculus mus. Nullam euismod eu purus id vestibulum. Duis a diam ultrices, convallis magna fermentum, consectetur massa.
-                Etiam eu scelerisque lacus, quis rutrum metus. Aliquam euismod eros a pretium tempor. Nullam nunc nisi, cursus eu sodales sit amet,
-                convallis ut est. Duis sit amet malesuada nibh. Pellentesque dictum sapien et scelerisque pulvinar. Sed imperdiet orci ex, vel tincidunt
-                risus dapibus vitae. Nullam congue arcu at erat blandit hendrerit. Integer congue tortor feugiat, porta lectus eget, fringilla odio. Fusce
-                commodo faucibus metus in ullamcorper. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-                Sed purus lectus, hendrerit eget luctus ac, ultricies eget orci. Vestibulum quam nulla, ornare sit amet dui id, mollis posuere ipsum.
-                Integer consequat ex vitae odio elementum, sit amet placerat arcu aliquam. Morbi ligula urna, dictum nec dapibus at, suscipit non quam.
-                Vivamus congue blandit velit, vel sodales eros vestibulum eu. Nullam molestie dignissim risus, a tempus lectus sagittis at. Aliquam varius
-                vulputate tellus, eget pretium ex porta eget.
+                Through the research conducted, I feel like I have a stronger grasp on what people generally expect to see when they view a portfolio or want to view one.
+                A portfolio is the visual representation of you and all your achievements. The results that stemmed from my research helped me to steer a large portion
+                of my design and layout to fit the expectations set forth from the people that I had conducted my testing and research with. It was understood that
+                the portfolio should be a sort of visual resume but not plain like the actual resume. This was a chance to showcase my abilities and therefore it was
+                imperative to provide a sense of overall theme and design with the portfolio. I feel like this process may be a neverending one as I wish to
+                continue to work on this portfolio and therefore will always need some from of user testing.
+                <br /><br />
+                I find that I had came into this portfolio with a set design and list of features that I wanted to implement but as I got through the actual process
+                I had learned that what I wanted was essentially different from what I actually needed. I really wanted to use a color theme that revolved around the
+                color purple and shades of it but at the same time I wanted to have a sort of hero image banner at the top of my portfolio. These two clashed due to the
+                nature of my photo so I had to decide upon one or the other. Through user testing I found that people generally preferred the hero image and rather me
+                switch up the color theme. It was through this that I was able to make more progress on the overall portfolio and I valued the findings that I was able to gather.
               </div>
             </div>
           </div>
@@ -231,20 +232,20 @@
               <h2>Incorporation of Findings</h2>
             </div>
           </div>
-          <div class="subsection-body-wrapper">
-            <div class="subsection-body">
+          <div class="subsection-body-wrapper paragraph-text">
+            <div class="subsection-body wide-body">
               <div class="subsection-body-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sit amet sapien luctus elit congue venenatis.
-                Donec quis mauris mattis, ornare mauris vitae, placerat sapien. Orci varius natoque penatibus et magnis dis parturient montes,
-                nascetur ridiculus mus. Nullam euismod eu purus id vestibulum. Duis a diam ultrices, convallis magna fermentum, consectetur massa.
-                Etiam eu scelerisque lacus, quis rutrum metus. Aliquam euismod eros a pretium tempor. Nullam nunc nisi, cursus eu sodales sit amet,
-                convallis ut est. Duis sit amet malesuada nibh. Pellentesque dictum sapien et scelerisque pulvinar. Sed imperdiet orci ex, vel tincidunt
-                risus dapibus vitae. Nullam congue arcu at erat blandit hendrerit. Integer congue tortor feugiat, porta lectus eget, fringilla odio. Fusce
-                commodo faucibus metus in ullamcorper. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-                Sed purus lectus, hendrerit eget luctus ac, ultricies eget orci. Vestibulum quam nulla, ornare sit amet dui id, mollis posuere ipsum.
-                Integer consequat ex vitae odio elementum, sit amet placerat arcu aliquam. Morbi ligula urna, dictum nec dapibus at, suscipit non quam.
-                Vivamus congue blandit velit, vel sodales eros vestibulum eu. Nullam molestie dignissim risus, a tempus lectus sagittis at. Aliquam varius
-                vulputate tellus, eget pretium ex porta eget.
+                Incorporating the findings was much easier than actually going out and doing the research and testing in my opinion. With a list of opinions and Google,
+                I was able to tailor the portfolio to fit the expectations that came with the thought of a portfolio while keeping the design that I had envisioned for
+                it. Of course, there were some difficulties trying to incorporate everything that I had wanted so I am not completely finished with the portfolio.
+                The incorporation of what I gained from the findings did not alter my vision too much which was something that I was really excited about. I was able
+                to improve my portfolio without sacrificing what I wanted it to look like.
+                <br /><br />
+                Removing the clashing colors was the first step to incoporating the changes that people thought I should make. I decided to have a neutral black color
+                replace the purple but I wanted to not have it be so plain so I utilized the 'rgba' property to add a bit of effect and depth to the main sections. I want to
+                say that this draws more emphasis to what the box contains due to the contrasting colors of a black shade and a white box but that wasn't what I had planned for
+                and it was just what it happened to turn out to be. I found that while incorporating the new changes requested, I was able to discover more about what I want
+                the overall design to look like.
               </div>
             </div>
           </div>
