made background parallax on mobile too

--- a/research.html
+++ b/research.html
@@ -35,7 +35,7 @@
               <a class="utility-icon" href="#incorporation"><img id="incorporation-utility-icon" class="uicon" src=./img/incorporation-icon.png></a>
             </li>
             <li>
-              <a class="utility-icon" href="https://github.com/khuongTiet"><img id="github-utility-icon" class="uicon" src=./img/github.png></a>
+              <a class="utility-icon" href="https://github.com/khuongTiet/khuongtiet.github.io/"><img id="github-utility-icon" class="uicon" src=./img/github.png></a>
             </li>
           </ul>
         </div>
